# sigfig

./: README.md  pyproject.toml
sigfig/: __init__.py
tests/: test_sigfig.py
